compiler/fir/analysis-tests/testData/resolve/diagnostics/typeParametersInEnum.kt
enum class A<<!TYPE_PARAMETERS_IN_ENUM!>B<!>, C : B, D>

enum class B